elk/kibana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: kubernetes-logging
  labels:
    app: kibana
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
      annotations:
        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.7.0
        # resources:
        #   limits:
        #     cpu: 1000m
        #     memory: 1Gi
        #   requests:
        #     cpu: 100m
        #     memory: 500Mi
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
