elk/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: kubernetes-logging
  labels:
    app: kibana
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Kibana"
spec:
  selector:
    app: kibana
  ports:
  - port: 5601
    protocol: TCP
    targetPort: ui
