elk/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: kubernetes-logging
  labels:
    app: kibana
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kibana.local
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
